fix spacing

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 
 .cards {
-  max-width: 100rem;
+  max-width: 90rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   border-radius: 9px;
@@ -28,7 +28,7 @@
 .card {
   display: flex;
   flex-direction: column;
-  padding: 3.2rem;
+  padding: 4.8rem 4.4rem;
 }
 
 .card .btn:active {
